--- a/agda-lvo/Everything.html
+++ b/agda-lvo/Everything.html
@@ -84,6 +84,11 @@
 <li>递归 <code>ω-rec f from (suc _)</code> 即得 <code>f</code> 的不动点枚举函数, 记作 <code>f′</code></li>
 <li>我们证明了高阶函数 <code>_′</code> 保持序数嵌入且保持保良序性</li>
 </ul>
+<pre class="Agda"><a id="1253" class="Keyword">open</a> <a id="1258" class="Keyword">import</a> <a id="1265" href="Veblen.Fixpoint.Lower.html" class="Module">Veblen.Fixpoint.Lower</a> <a id="1287" class="Keyword">public</a>
+</pre>
+<ul>
+<li>关于不动点的一些平凡的例子</li>
+</ul>
 </main>
 
 <script>
