--- a/agda-lvo/Everything.html
+++ b/agda-lvo/Everything.html
@@ -89,6 +89,14 @@
 <ul>
 <li>关于不动点的一些平凡的例子</li>
 </ul>
+<pre class="Agda"><a id="1324" class="Keyword">open</a> <a id="1329" class="Keyword">import</a> <a id="1336" href="Veblen.Epsilon.html" class="Module">Veblen.Epsilon</a> <a id="1351" class="Keyword">public</a>
+</pre>
+<ul>
+<li>ε函数定义为 <code>(ω ^_) ′</code></li>
+<li>我们证明了对任意 <code>α</code> 有 <code>ε (suc α) ≈ ω ^^[ suc (ε α) ] ω</code> , 且对任意良构 <code>α</code> 有 <code>ε (suc α) ≈ ε α ^^ ω</code></li>
+<li>ζ 定义为 <code>ε ′</code> 且 η 为 <code>ζ ′</code></li>
+<li><code>ε</code>, <code>ζ</code>, <code>η</code>, … 都是序数嵌入且保良构</li>
+</ul>
 </main>
 
 <script>
