--- a/agda-lvo/Everything.html
+++ b/agda-lvo/Everything.html
@@ -93,9 +93,14 @@
 </pre>
 <ul>
 <li>ε函数定义为 <code>(ω ^_) ′</code></li>
-<li>我们证明了对任意 <code>α</code> 有 <code>ε (suc α) ≈ ω ^^[ suc (ε α) ] ω</code> , 且对任意良构 <code>α</code> 有 <code>ε (suc α) ≈ ε α ^^ ω</code></li>
+<li>对任意 <code>α</code> 有 <code>ε (suc α) ≡ ω ^^[ suc (ε α) ] ω</code></li>
 <li>ζ 定义为 <code>ε ′</code> 且 η 为 <code>ζ ′</code></li>
 <li><code>ε</code>, <code>ζ</code>, <code>η</code>, … 都是序数嵌入且保良构</li>
+</ul>
+<pre class="Agda"><a id="1496" class="Keyword">open</a> <a id="1501" class="Keyword">import</a> <a id="1508" href="Veblen.Epsilon.Alternative.html" class="Module">Veblen.Epsilon.Alternative</a> <a id="1535" class="Keyword">public</a>
+</pre>
+<ul>
+<li>我们证明了对任意良构 <code>α</code> 有 <code>ε (suc α) ≈ ε α ^^ ω</code></li>
 </ul>
 </main>
 
