--- a/agda-lvo/Everything.html
+++ b/agda-lvo/Everything.html
@@ -79,17 +79,17 @@
 <pre class="Agda"><a id="1054" class="Keyword">open</a> <a id="1059" class="Keyword">import</a> <a id="1066" href="Veblen.Fixpoint.html" class="Module">Veblen.Fixpoint</a> <a id="1082" class="Keyword">public</a>
 </pre>
 <ul>
-<li>定义了无穷迭代 <code>ω-rec</code></li>
-<li>如果 <code>f</code> 是序数嵌入那么 <code>ω-rec f from α</code> 是不小于 <code>α</code> 的不动点</li>
-<li>递归 <code>ω-rec f from (suc _)</code> 即得 <code>f</code> 的不动点枚举函数, 记作 <code>f′</code></li>
+<li>定义了无穷迭代 <code>_⋱_</code></li>
+<li>如果 <code>F</code> 是序数嵌入那么 <code>F ⋱ α</code> 是不小于 <code>α</code> 的不动点</li>
+<li>递归 <code>F ⋱_ ∘ suc</code> 即得 <code>F</code> 的不动点枚举函数, 记作 <code>F ′</code></li>
 <li>我们证明了高阶函数 <code>_′</code> 保持序数嵌入且保持保良序性</li>
 </ul>
-<pre class="Agda"><a id="1253" class="Keyword">open</a> <a id="1258" class="Keyword">import</a> <a id="1265" href="Veblen.Fixpoint.Lower.html" class="Module">Veblen.Fixpoint.Lower</a> <a id="1287" class="Keyword">public</a>
+<pre class="Agda"><a id="1233" class="Keyword">open</a> <a id="1238" class="Keyword">import</a> <a id="1245" href="Veblen.Fixpoint.Lower.html" class="Module">Veblen.Fixpoint.Lower</a> <a id="1267" class="Keyword">public</a>
 </pre>
 <ul>
 <li>关于不动点的一些平凡的例子</li>
 </ul>
-<pre class="Agda"><a id="1324" class="Keyword">open</a> <a id="1329" class="Keyword">import</a> <a id="1336" href="Veblen.Epsilon.html" class="Module">Veblen.Epsilon</a> <a id="1351" class="Keyword">public</a>
+<pre class="Agda"><a id="1304" class="Keyword">open</a> <a id="1309" class="Keyword">import</a> <a id="1316" href="Veblen.Epsilon.html" class="Module">Veblen.Epsilon</a> <a id="1331" class="Keyword">public</a>
 </pre>
 <ul>
 <li>ε函数定义为 <code>(ω ^_) ′</code></li>
@@ -97,10 +97,16 @@
 <li>ζ 定义为 <code>ε ′</code> 且 η 为 <code>ζ ′</code></li>
 <li><code>ε</code>, <code>ζ</code>, <code>η</code>, … 都是序数嵌入且保良构</li>
 </ul>
-<pre class="Agda"><a id="1496" class="Keyword">open</a> <a id="1501" class="Keyword">import</a> <a id="1508" href="Veblen.Epsilon.Alternative.html" class="Module">Veblen.Epsilon.Alternative</a> <a id="1535" class="Keyword">public</a>
+<pre class="Agda"><a id="1476" class="Keyword">open</a> <a id="1481" class="Keyword">import</a> <a id="1488" href="Veblen.Epsilon.Alternative.html" class="Module">Veblen.Epsilon.Alternative</a> <a id="1515" class="Keyword">public</a>
 </pre>
 <ul>
 <li>我们证明了对任意良构 <code>α</code> 有 <code>ε (suc α) ≈ ε α ^^ ω</code></li>
+</ul>
+<pre class="Agda"><a id="1578" class="Keyword">open</a> <a id="1583" class="Keyword">import</a> <a id="1590" href="Veblen.Function.html" class="Module">Veblen.Function</a> <a id="1606" class="Keyword">public</a>
+</pre>
+<ul>
+<li>定义了二元 Veblen 函数 <code>φ α β</code></li>
+<li>Γ₀ 定义为 <code>φ ⋱ zero</code></li>
 </ul>
 </main>
 
