--- a/agda-lvo/Veblen.Function.html
+++ b/agda-lvo/Veblen.Function.html
@@ -317,7 +317,7 @@
     <a id="10718" href="Veblen.Function.html#1659" class="Function">Ψ</a> <a id="10720" href="Veblen.Function.html#2777" class="Bound">F</a> <a id="10722" class="Symbol">(</a><a id="10723" href="Ordinal.html#3112" class="InductiveConstructor">lim</a> <a id="10727" class="Bound">f</a><a id="10728" class="Symbol">)</a> <a id="10730" class="Bound">γ</a>                     <a id="10752" href="Relation.Binary.Reasoning.Base.Triple.html#5119" class="Function Operator">∎</a>
 </pre>
 <h2 id="特化">特化</h2>
-<p>以 <code>ω ^_</code> 实例化 Properties 模块即可特到 <code>φ</code> 的性质.</p>
+<p>以 <code>ω ^_</code> 实例化 Properties 模块即可得到 <code>φ</code> 的性质.</p>
 <pre class="Agda"><a id="10815" class="Keyword">open</a> <a id="10820" href="Veblen.Function.html#2766" class="Module">Properties</a> <a id="10831" class="Symbol">(</a><a id="10832" href="Ordinal.WellFormed.html#2317" class="Function">ω</a> <a id="10834" href="Ordinal.Arithmetic.html#2236" class="Function Operator">^_</a><a id="10836" class="Symbol">)</a> <a id="10838" href="Veblen.Epsilon.html#1313" class="Function">ω^-normal</a>
 </pre>
 <p>我们只列出主要结论.</p>
