--- a/agda-lvo/NonWellFormed.html
+++ b/agda-lvo/NonWellFormed.html
@@ -107,7 +107,7 @@
 <li>证明了 <code>φ</code> 的嵌入性, 单调性, 合同性, 不动点性和保良构性</li>
 <li>Γ₀ 定义为 <code>(λ α → φ α zero) ⋱ zero</code></li>
 </ul>
-<p><a href="https://github.com/choukh/agda-lvo/blob/main/src/WellFormed.lagda.md">第2卷</a></p>
+<p><a href="https://choukh.github.io/agda-lvo/WellFormed.html">前往第2卷</a></p>
 </main>
 
 <script>
