--- a/agda-lvo/WellFormed.html
+++ b/agda-lvo/WellFormed.html
@@ -33,7 +33,7 @@
 高亮渲染: <a href="https://choukh.github.io/agda-lvo/WellFormed.html">WellFormed.html</a><br />
 如果你在知乎看到本文: 知乎对Agda语法高亮的支持非常有限, 建议跳转到以上网站阅读</p>
 </blockquote>
-<p><a href="https://choukh.github.io/agda-lvo/NonWellFormed.html">前往第2卷</a></p>
+<p><a href="https://choukh.github.io/agda-lvo/NonWellFormed.html">返回第1卷</a></p>
 <pre class="Agda"><a id="406" class="Symbol">{-#</a> <a id="410" class="Keyword">OPTIONS</a> <a id="418" class="Pragma">--without-K</a> <a id="430" class="Pragma">--safe</a> <a id="437" class="Symbol">#-}</a>
 
 <a id="442" class="Keyword">module</a> <a id="449" href="WellFormed.html" class="Module">WellFormed</a> <a id="460" class="Keyword">where</a>
@@ -43,6 +43,7 @@
 <ul>
 <li>良构序数以及其上的序</li>
 </ul>
+<p><a href="https://choukh.github.io/agda-lvo/NonWellFormed.html">返回第1卷</a></p>
 </main>
 
 <script>
