--- a/hilbert-prop/Everything.html
+++ b/hilbert-prop/Everything.html
@@ -27,13 +27,13 @@
 
 <main>
 <h1 id="agda命题逻辑0-目录">Agda命题逻辑(0) 目录</h1>
-<p>(1). 希尔伯特系统</p>
-<pre class="Agda"><a id="120" class="Keyword">open</a> <a id="125" class="Keyword">import</a> <a id="132" href="Hilbert.html" class="Module">Hilbert</a> <a id="140" class="Keyword">public</a>
+<p>(1. 希尔伯特系统</p>
+<pre class="Agda"><a id="119" class="Keyword">open</a> <a id="124" class="Keyword">import</a> <a id="131" href="Hilbert.html" class="Module">Hilbert</a> <a id="139" class="Keyword">public</a>
 </pre>
 <ol start="2" type="1">
 <li>演绎定理与一致性</li>
 </ol>
-<pre class="Agda"><a id="173" class="Keyword">open</a> <a id="178" class="Keyword">import</a> <a id="185" class="Module">Deduction</a> <a id="195" class="Keyword">public</a>
+<pre class="Agda"><a id="172" class="Keyword">open</a> <a id="177" class="Keyword">import</a> <a id="184" href="Deduction.html" class="Module">Deduction</a> <a id="194" class="Keyword">public</a>
 </pre>
 </main>
 
