--- a/hilbert-prop/Everything.html
+++ b/hilbert-prop/Everything.html
@@ -21,19 +21,25 @@
     <strong>Contents</strong><label for="contents">⊕</label>
   <input type="checkbox" id="contents">
   <ul>
-  <li><a href="#agda命题逻辑0-目录" id="toc-agda命题逻辑0-目录">Agda命题逻辑(0) 目录</a></li>
+  <li><a href="#agda命题逻辑0-目录" id="toc-agda命题逻辑0-目录">Agda命题逻辑(0) 目录</a>
+  <ul>
+  <li><a href="#希尔伯特系统" id="toc-希尔伯特系统">(1) 希尔伯特系统</a></li>
+  <li><a href="#演绎定理与一致性" id="toc-演绎定理与一致性">(2) 演绎定理与一致性</a></li>
+  </ul></li>
   </ul>
 </nav>
 
 <main>
 <h1 id="agda命题逻辑0-目录">Agda命题逻辑(0) 目录</h1>
-<p>(1. 希尔伯特系统</p>
-<pre class="Agda"><a id="119" class="Keyword">open</a> <a id="124" class="Keyword">import</a> <a id="131" href="Hilbert.html" class="Module">Hilbert</a> <a id="139" class="Keyword">public</a>
+<pre class="Agda"><a id="107" class="Symbol">{-#</a> <a id="111" class="Keyword">OPTIONS</a> <a id="119" class="Pragma">--without-K</a> <a id="131" class="Pragma">--safe</a> <a id="138" class="Symbol">#-}</a>
+
+<a id="143" class="Keyword">module</a> <a id="150" href="Everything.html" class="Module">Everything</a> <a id="161" class="Keyword">where</a>
 </pre>
-<ol start="2" type="1">
-<li>演绎定理与一致性</li>
-</ol>
-<pre class="Agda"><a id="172" class="Keyword">open</a> <a id="177" class="Keyword">import</a> <a id="184" href="Deduction.html" class="Module">Deduction</a> <a id="194" class="Keyword">public</a>
+<h3 id="希尔伯特系统">(1) 希尔伯特系统</h3>
+<pre class="Agda"><a id="196" class="Keyword">open</a> <a id="201" class="Keyword">import</a> <a id="208" href="Hilbert.html" class="Module">Hilbert</a> <a id="216" class="Keyword">public</a>
+</pre>
+<h3 id="演绎定理与一致性">(2) 演绎定理与一致性</h3>
+<pre class="Agda"><a id="254" class="Keyword">open</a> <a id="259" class="Keyword">import</a> <a id="266" href="Deduction.html" class="Module">Deduction</a> <a id="276" class="Keyword">public</a>
 </pre>
 </main>
 
