--- a/HilbertSystem/Everything.html
+++ b/HilbertSystem/Everything.html
@@ -24,7 +24,7 @@
   <li><a href="#agda命题逻辑0-目录" id="toc-agda命题逻辑0-目录">Agda命题逻辑(0) 目录</a>
   <ul>
   <li><a href="#希尔伯特系统" id="toc-希尔伯特系统">(1) 希尔伯特系统</a></li>
-  <li><a href="#演绎定理与一致性" id="toc-演绎定理与一致性">(2) 演绎定理与一致性</a></li>
+  <li><a href="#演绎定理" id="toc-演绎定理">(2) 演绎定理</a></li>
   </ul></li>
   </ul>
 </nav>
@@ -38,8 +38,8 @@
 <h3 id="希尔伯特系统">(1) 希尔伯特系统</h3>
 <pre class="Agda"><a id="196" class="Keyword">open</a> <a id="201" class="Keyword">import</a> <a id="208" href="Hilbert.html" class="Module">Hilbert</a> <a id="216" class="Keyword">public</a>
 </pre>
-<h3 id="演绎定理与一致性">(2) 演绎定理与一致性</h3>
-<pre class="Agda"><a id="254" class="Keyword">open</a> <a id="259" class="Keyword">import</a> <a id="266" href="Deduction.html" class="Module">Deduction</a> <a id="276" class="Keyword">public</a>
+<h3 id="演绎定理">(2) 演绎定理</h3>
+<pre class="Agda"><a id="250" class="Keyword">open</a> <a id="255" class="Keyword">import</a> <a id="262" href="Deduction.html" class="Module">Deduction</a> <a id="272" class="Keyword">public</a>
 </pre>
 </main>
 
