--- a/agda-flypitch/FOL.Signature.html
+++ b/agda-flypitch/FOL.Signature.html
@@ -70,23 +70,23 @@
     <a id="Signature.relations"></a><a id="1192" href="FOL.Signature.html#1192" class="Field">relations</a> <a id="1202" class="Symbol">:</a> <a id="1204" href="Agda.Builtin.Nat.html#186" class="Datatype">ℕ</a> <a id="1206" class="Symbol">→</a> <a id="1208" href="Agda.Primitive.html#320" class="Primitive">Set</a> <a id="1212" href="FOL.Signature.html#1131" class="Bound">u</a>
   <a id="Signature.constants"></a><a id="1216" href="FOL.Signature.html#1216" class="Function">constants</a> <a id="1226" class="Symbol">=</a> <a id="1228" href="FOL.Signature.html#1166" class="Field">functions</a> <a id="1238" class="Number">0</a>
 </pre>
-<p><strong>例</strong> 下面给出了签名的一个实例, 它可以作为皮亚诺算术 (一种一阶理论) 的签名. 注意符号的元数被编码到了类型里面. 例如, 常量 <code>O</code> 的类型是 <code>func 0</code>, 后继函数 <code>S</code> 的类型是 <code>func 1</code>, 加法 <code>+</code> 以及乘法 <code>*</code> 的类型是 <code>func 2</code>, 小于关系 <code>&lt;</code> 的类型是 <code>rel 2</code>111111111111111111111QQQQQAzz .</p>
-<pre class="Agda"><a id="1455" class="Keyword">module</a> <a id="ExampleSignaturePA"></a><a id="1462" href="FOL.Signature.html#1462" class="Module">ExampleSignaturePA</a> <a id="1481" class="Keyword">where</a>
+<p><strong>例</strong> 下面给出了签名的一个实例, 它可以作为皮亚诺算术 (一种一阶理论) 的签名. 注意符号的元数被编码到了类型里面. 例如, 常量 <code>O</code> 的类型是 <code>func 0</code>, 后继函数 <code>S</code> 的类型是 <code>func 1</code>, 加法 <code>+</code> 以及乘法 <code>*</code> 的类型是 <code>func 2</code>, 小于关系 <code>&lt;</code> 的类型是 <code>rel 2</code>.</p>
+<pre class="Agda"><a id="1421" class="Keyword">module</a> <a id="ExampleSignaturePA"></a><a id="1428" href="FOL.Signature.html#1428" class="Module">ExampleSignaturePA</a> <a id="1447" class="Keyword">where</a>
 
-  <a id="1490" class="Keyword">data</a> <a id="ExampleSignaturePA.func"></a><a id="1495" href="FOL.Signature.html#1495" class="Datatype">func</a> <a id="1500" class="Symbol">:</a> <a id="1502" href="Agda.Builtin.Nat.html#186" class="Datatype">ℕ</a> <a id="1504" class="Symbol">→</a> <a id="1506" href="Agda.Primitive.html#320" class="Primitive">Set</a> <a id="1510" class="Keyword">where</a>
-    <a id="ExampleSignaturePA.func.O"></a><a id="1520" href="FOL.Signature.html#1520" class="InductiveConstructor">O</a> <a id="1522" class="Symbol">:</a> <a id="1524" href="FOL.Signature.html#1495" class="Datatype">func</a> <a id="1529" class="Number">0</a>
-    <a id="ExampleSignaturePA.func.S"></a><a id="1535" href="FOL.Signature.html#1535" class="InductiveConstructor">S</a> <a id="1537" class="Symbol">:</a> <a id="1539" href="FOL.Signature.html#1495" class="Datatype">func</a> <a id="1544" class="Number">1</a>
-    <a id="ExampleSignaturePA.func.+"></a><a id="1550" href="FOL.Signature.html#1550" class="InductiveConstructor">+</a> <a id="1552" class="Symbol">:</a> <a id="1554" href="FOL.Signature.html#1495" class="Datatype">func</a> <a id="1559" class="Number">2</a>
-    <a id="ExampleSignaturePA.func.*"></a><a id="1565" href="FOL.Signature.html#1565" class="InductiveConstructor">*</a> <a id="1567" class="Symbol">:</a> <a id="1569" href="FOL.Signature.html#1495" class="Datatype">func</a> <a id="1574" class="Number">2</a>
+  <a id="1456" class="Keyword">data</a> <a id="ExampleSignaturePA.func"></a><a id="1461" href="FOL.Signature.html#1461" class="Datatype">func</a> <a id="1466" class="Symbol">:</a> <a id="1468" href="Agda.Builtin.Nat.html#186" class="Datatype">ℕ</a> <a id="1470" class="Symbol">→</a> <a id="1472" href="Agda.Primitive.html#320" class="Primitive">Set</a> <a id="1476" class="Keyword">where</a>
+    <a id="ExampleSignaturePA.func.O"></a><a id="1486" href="FOL.Signature.html#1486" class="InductiveConstructor">O</a> <a id="1488" class="Symbol">:</a> <a id="1490" href="FOL.Signature.html#1461" class="Datatype">func</a> <a id="1495" class="Number">0</a>
+    <a id="ExampleSignaturePA.func.S"></a><a id="1501" href="FOL.Signature.html#1501" class="InductiveConstructor">S</a> <a id="1503" class="Symbol">:</a> <a id="1505" href="FOL.Signature.html#1461" class="Datatype">func</a> <a id="1510" class="Number">1</a>
+    <a id="ExampleSignaturePA.func.+"></a><a id="1516" href="FOL.Signature.html#1516" class="InductiveConstructor">+</a> <a id="1518" class="Symbol">:</a> <a id="1520" href="FOL.Signature.html#1461" class="Datatype">func</a> <a id="1525" class="Number">2</a>
+    <a id="ExampleSignaturePA.func.*"></a><a id="1531" href="FOL.Signature.html#1531" class="InductiveConstructor">*</a> <a id="1533" class="Symbol">:</a> <a id="1535" href="FOL.Signature.html#1461" class="Datatype">func</a> <a id="1540" class="Number">2</a>
 
-  <a id="1579" class="Keyword">data</a> <a id="ExampleSignaturePA.rel"></a><a id="1584" href="FOL.Signature.html#1584" class="Datatype">rel</a> <a id="1588" class="Symbol">:</a> <a id="1590" href="Agda.Builtin.Nat.html#186" class="Datatype">ℕ</a> <a id="1592" class="Symbol">→</a> <a id="1594" href="Agda.Primitive.html#320" class="Primitive">Set</a> <a id="1598" class="Keyword">where</a>
-    <a id="ExampleSignaturePA.rel.&lt;"></a><a id="1608" href="FOL.Signature.html#1608" class="InductiveConstructor">&lt;</a> <a id="1610" class="Symbol">:</a> <a id="1612" href="FOL.Signature.html#1584" class="Datatype">rel</a> <a id="1616" class="Number">2</a>
+  <a id="1545" class="Keyword">data</a> <a id="ExampleSignaturePA.rel"></a><a id="1550" href="FOL.Signature.html#1550" class="Datatype">rel</a> <a id="1554" class="Symbol">:</a> <a id="1556" href="Agda.Builtin.Nat.html#186" class="Datatype">ℕ</a> <a id="1558" class="Symbol">→</a> <a id="1560" href="Agda.Primitive.html#320" class="Primitive">Set</a> <a id="1564" class="Keyword">where</a>
+    <a id="ExampleSignaturePA.rel.&lt;"></a><a id="1574" href="FOL.Signature.html#1574" class="InductiveConstructor">&lt;</a> <a id="1576" class="Symbol">:</a> <a id="1578" href="FOL.Signature.html#1550" class="Datatype">rel</a> <a id="1582" class="Number">2</a>
 
-  <a id="ExampleSignaturePA.σ"></a><a id="1621" href="FOL.Signature.html#1621" class="Function">σ</a> <a id="1623" class="Symbol">:</a> <a id="1625" href="FOL.Signature.html#1120" class="Record">Signature</a>
-  <a id="1637" href="FOL.Signature.html#1621" class="Function">σ</a> <a id="1639" class="Symbol">=</a> <a id="1641" class="Keyword">record</a>
-    <a id="1652" class="Symbol">{</a> <a id="1654" href="FOL.Signature.html#1166" class="Field">functions</a> <a id="1664" class="Symbol">=</a> <a id="1666" href="FOL.Signature.html#1495" class="Datatype">func</a>
-    <a id="1675" class="Symbol">;</a> <a id="1677" href="FOL.Signature.html#1192" class="Field">relations</a> <a id="1687" class="Symbol">=</a> <a id="1689" href="FOL.Signature.html#1584" class="Datatype">rel</a>
-    <a id="1697" class="Symbol">}</a>
+  <a id="ExampleSignaturePA.σ"></a><a id="1587" href="FOL.Signature.html#1587" class="Function">σ</a> <a id="1589" class="Symbol">:</a> <a id="1591" href="FOL.Signature.html#1120" class="Record">Signature</a>
+  <a id="1603" href="FOL.Signature.html#1587" class="Function">σ</a> <a id="1605" class="Symbol">=</a> <a id="1607" class="Keyword">record</a>
+    <a id="1618" class="Symbol">{</a> <a id="1620" href="FOL.Signature.html#1166" class="Field">functions</a> <a id="1630" class="Symbol">=</a> <a id="1632" href="FOL.Signature.html#1461" class="Datatype">func</a>
+    <a id="1641" class="Symbol">;</a> <a id="1643" href="FOL.Signature.html#1192" class="Field">relations</a> <a id="1653" class="Symbol">=</a> <a id="1655" href="FOL.Signature.html#1550" class="Datatype">rel</a>
+    <a id="1663" class="Symbol">}</a>
 </pre>
 </main>
 
