--- a/USST/Everything.html
+++ b/USST/Everything.html
@@ -39,23 +39,23 @@
 <p><a href="https://zhuanlan.zhihu.com/p/643059692">(1) 泛等基础</a></p>
 <pre class="Agda"><a id="460" class="Keyword">import</a> <a id="467" href="Cubical.html" class="Module">Cubical</a>
 </pre>
-<p><a href="">(2) 前置知识</a></p>
-<pre class="Agda"><a id="502" class="Keyword">import</a> <a id="509" href="Preliminary.html" class="Module">Preliminary</a>
+<p><a href="https://zhuanlan.zhihu.com/p/649742992">(2) 前置知识</a></p>
+<pre class="Agda"><a id="540" class="Keyword">import</a> <a id="547" href="Preliminary.html" class="Module">Preliminary</a>
 </pre>
 <p><a href="https://zhuanlan.zhihu.com/p/643217740">(3) 开胃菜: CH → LEM</a></p>
-<pre class="Agda"><a id="595" class="Keyword">import</a> <a id="602" href="ReverseMath.CH%25E2%2586%2592LEM.html" class="Module">ReverseMath.CH→LEM</a>
+<pre class="Agda"><a id="633" class="Keyword">import</a> <a id="640" href="ReverseMath.CH%25E2%2586%2592LEM.html" class="Module">ReverseMath.CH→LEM</a>
 </pre>
 <p><a href="https://zhuanlan.zhihu.com/p/643453391">(4) 序数的定义及其泛等原理</a></p>
-<pre class="Agda"><a id="693" class="Keyword">import</a> <a id="700" href="Ordinal.Base.html" class="Module">Ordinal.Base</a>
+<pre class="Agda"><a id="731" class="Keyword">import</a> <a id="738" href="Ordinal.Base.html" class="Module">Ordinal.Base</a>
 </pre>
 <p><a href="https://zhuanlan.zhihu.com/p/644984990">(5) 序数的序</a></p>
-<pre class="Agda"><a id="778" class="Keyword">import</a> <a id="785" href="Ordinal.Order.html" class="Module">Ordinal.Order</a>
+<pre class="Agda"><a id="816" class="Keyword">import</a> <a id="823" href="Ordinal.Order.html" class="Module">Ordinal.Order</a>
 </pre>
 <p><a href="https://zhuanlan.zhihu.com/p/646397707">(6) 吃自己: 序数宇宙也是序数</a></p>
-<pre class="Agda"><a id="873" class="Keyword">import</a> <a id="880" href="Ordinal.OrdInOrd.html" class="Module">Ordinal.OrdInOrd</a>
+<pre class="Agda"><a id="911" class="Keyword">import</a> <a id="918" href="Ordinal.OrdInOrd.html" class="Module">Ordinal.OrdInOrd</a>
 </pre>
 <p><a href="">(7) 基数</a></p>
-<pre class="Agda"><a id="922" class="Keyword">import</a> <a id="929" href="Cardinal.Base.html" class="Module">Cardinal.Base</a>
+<pre class="Agda"><a id="960" class="Keyword">import</a> <a id="967" href="Cardinal.Base.html" class="Module">Cardinal.Base</a>
 </pre>
 </main>
 
