--- a/USST/Cubical.html
+++ b/USST/Cubical.html
@@ -66,7 +66,7 @@
 </blockquote>
 <h2 id="前言">前言</h2>
 <p><strong>泛等基础 (univalent foundations, 简称 UF)</strong> 中有原生的集合概念 <code>hSet</code>, 叫做<strong>同伦集 (homotopy-sets)</strong>. 我们决定尽量避免提到同伦的概念, 所以这里叫它<strong>泛等结构集 (univalent structural sets)</strong>, 由于它是一种<strong>结构集合论 (structural set theory)</strong>. 我们尝试在其中复刻传统质料集合论 (material set theory) 的基本概念, 如序数, 基数, 连续统假设 (CH), 广义连续统假设 (GCH) 等, 并研究它们与排中律 (LEM) 和选择公理 (AC) 之间的反推事实. 这得益于 UF 是一种<strong>中性数学基础 (foundation of neutral constructive mathematics)</strong>. 本文是这一系列的第一篇, 主要介绍泛等基础的一些基本概念.</p>
-<p>所谓泛等基础, 简单来说就是在 Martin-Löf 类型论 (MTLL) 的基础上加上泛等公理 (UA) 所得到的扩展, 它解决了 MLTT 的一些问题, 从而足够作为一种数学基础. 本文中我们使用 <a href="https://agda.readthedocs.io/en/v2.6.3/language/cubical.html">Cubical Agda</a> 立方类型论来作为泛等基础的具体实现.</p>
+<p>所谓泛等基础, 简单来说就是在 Martin-Löf 类型论 (MLTT) 的基础上加上泛等公理 (UA) 所得到的扩展, 它解决了 MLTT 的一些问题, 从而足够作为一种数学基础. 本文中我们使用 <a href="https://agda.readthedocs.io/en/v2.6.3/language/cubical.html">Cubical Agda</a> 立方类型论来作为泛等基础的具体实现.</p>
 <pre class="Agda"><a id="944" class="Symbol">{-#</a> <a id="948" class="Keyword">OPTIONS</a> <a id="956" class="Pragma">--cubical</a> <a id="966" class="Pragma">--safe</a> <a id="973" class="Symbol">#-}</a>
 <a id="977" class="Keyword">module</a> <a id="984" href="Cubical.html" class="Module">Cubical</a> <a id="992" class="Keyword">where</a>
 </pre>
