--- a/USST/Everything.html
+++ b/USST/Everything.html
@@ -21,7 +21,10 @@
     <strong>Contents</strong><label for="contents">⊕</label>
   <input type="checkbox" id="contents">
   <ul>
-  <li><a href="#泛等结构集合论-0-目录" id="toc-泛等结构集合论-0-目录">泛等结构集合论 (0) 目录</a></li>
+  <li><a href="#泛等结构集合论-0-目录" id="toc-泛等结构集合论-0-目录">泛等结构集合论 (0) 目录</a>
+  <ul>
+  <li><a href="#参考文献" id="toc-参考文献">参考文献</a></li>
+  </ul></li>
   </ul>
 </nav>
 
@@ -55,8 +58,15 @@
 <pre class="Agda"><a id="911" class="Keyword">import</a> <a id="918" href="Ordinal.OrdInOrd.html" class="Module">Ordinal.OrdInOrd</a>
 </pre>
 <p><a href="">(7) 基数</a></p>
-<pre class="Agda"><a id="960" class="Keyword">import</a> <a id="967" href="Cardinal.Base.html" class="Module">Cardinal.Base</a>
+<pre class="Agda"><a id="960" class="Comment">--import Cardinal.Base</a>
 </pre>
+<h2 id="参考文献">参考文献</h2>
+<ol type="1">
+<li><a href="https://homotopytypetheory.org/book/">The HoTT Book</a></li>
+<li><a href="https://github.com/martinescardo/TypeTopology">martinescardo/TypeTopology</a></li>
+<li><a href="https://arxiv.org/abs/2301.10696">Set-Theoretic and Type-Theoretic Ordinals Coincide</a></li>
+<li><a href="https://www.ps.uni-saarland.de/Publications/documents/KirstRech_2021_The-Generalised.pdf">The Generalised Continuum Hypothesis Implies the Axiom of Choice in Coq</a></li>
+</ol>
 </main>
 
 <script>
