--- a/USST/Everything.html
+++ b/USST/Everything.html
@@ -57,8 +57,8 @@
 <p><a href="https://zhuanlan.zhihu.com/p/646397707">(6) 吃自己: 序数宇宙也是序数</a></p>
 <pre class="Agda"><a id="911" class="Keyword">import</a> <a id="918" href="Ordinal.OrdInOrd.html" class="Module">Ordinal.OrdInOrd</a>
 </pre>
-<p><a href="">(7) 基数</a></p>
-<pre class="Agda"><a id="960" class="Comment">--import Cardinal.Base</a>
+<p><a href="https://zhuanlan.zhihu.com/p/651332545">(7) 基数</a></p>
+<pre class="Agda"><a id="998" class="Keyword">import</a> <a id="1005" href="Cardinal.Base.html" class="Module">Cardinal.Base</a>
 </pre>
 <h2 id="参考文献">参考文献</h2>
 <ol type="1">
